chore: Merged 4.0.0 of solace